kustomize/base/grafana-ingress/httproute.yaml
# HTTPRoute: grafana.company.example -> сервис Grafana внутри кластера.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
  hostnames:
    - grafana.hello-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
